probably fixed squares animation consistency on smaller screens

--- a/style.scss
+++ b/style.scss
@@ -287,7 +287,7 @@ $sway-amounts: 100%, -100%;
     $color-transition: sample(1 through length($colors));
 
     &:nth-child(#{$i}) {
-      --square-left-offset: #{random_range(0vw, 75vw)};
+      --square-left-offset: #{random_range(0vw, 80vw)};
       --square-height: #{random_range(3vw, 15vw)};
       --square-float-duration: #{random_range(20s, 50s)};
       --square-float-delay: #{random_range(0s, 20s)};
@@ -332,7 +332,7 @@ $sway-amounts: 100%, -100%;
   }
   100% {
     opacity: 1;
-    transform: translateY(-350vh);
+    transform: translateY(-600vh);
   }
 }
 
